Update Capstone Project florenceopara.ipynb

--- a/Capstone Project florenceopara.ipynb
+++ b/Capstone Project florenceopara.ipynb
@@ -18,7 +18,7 @@
      "status": "ok",
      "timestamp": 1732838346841,
      "user": {
-      "displayName": "Rafiyat O",
+      "displayName": "Florence opara",
       "userId": "11002271654193874188"
      },
      "user_tz": -60
@@ -89,7 +89,7 @@
      "status": "ok",
      "timestamp": 1732836261057,
      "user": {
-      "displayName": "Rafiyat O",
+      "displayName": "florence Tochukwu opara",
       "userId": "11002271654193874188"
      },
      "user_tz": -60
@@ -240,7 +240,7 @@
      "status": "ok",
      "timestamp": 1732836261057,
      "user": {
-      "displayName": "Rafiyat O",
+      "displayName": "florence opara",
       "userId": "11002271654193874188"
      },
      "user_tz": -60
@@ -434,7 +434,7 @@
      "status": "ok",
      "timestamp": 1732836261731,
      "user": {
-      "displayName": "Rafiyat O",
+      "displayName": "Florence O",
       "userId": "11002271654193874188"
      },
      "user_tz": -60
@@ -473,7 +473,7 @@
      "status": "ok",
      "timestamp": 1732836261732,
      "user": {
-      "displayName": "Rafiyat O",
+      "displayName": "Florence o",
       "userId": "11002271654193874188"
      },
      "user_tz": -60
@@ -848,7 +848,7 @@
      "status": "ok",
      "timestamp": 1732836261732,
      "user": {
-      "displayName": "Rafiyat O",
+      "displayName": "Florence O",
       "userId": "11002271654193874188"
      },
      "user_tz": -60
